test/compile-errors/call-flags.crow
main void() bare
	()::string foo
	()::string[] foo
	()::string[][] foo

	()::bool foo
	()::bool[] foo
	()::bool[][] foo

	()::nat foo
	()::nat[] foo
	()::nat[][] foo

	_ nat[] = 1,

	()

# testing indirect call flags
foo[t] spec
	foo void(a t)

foo[t] void(a t[]) bare, t foo
	a[0] foo

foo void(_ string) bare, unsafe
	()

foo void(_ bool)
	()

foo void(_ nat) bare, summon
	()
